--- a/public/styles.css
+++ b/public/styles.css
@@ -45,25 +45,50 @@ nav{
 /* Show Chat */
 
 .msg-container{
-    height: 75vh;
+    height: 73vh;
     overflow: scroll;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: 0;  /* Firefox */
 }
 
+.msg-container::-webkit-scrollbar{
+    display: none;
+}
+
+
 .receiver-chat{
-    background-color: black;
     /* display: inline-block; */
+    margin: 5px;
+}
+
+.receiver-chat span{
+    background-color: black;
+    display: inline-block;
     border-radius: 20px;
     padding: 0.6rem 2rem;
-    margin: 5px;
+    color: white;
+    font-weight: 600;
+}
+
+.user-name{
+    margin: 0;
+    color: rgb(209, 207, 207);
+    font-size: 10px;
 }
 
 .sender-chat{
+    margin: 20px;
+    text-align: right;
+}
+
+.sender-chat span{
     background-color: blue;
     border-radius: 20px;
     padding: 0.6rem 2rem;
-    margin: 5px;
-    text-align: right;
+    color: white;
+    font-weight: 600;
 }
 
 /* Chat input */
@@ -86,9 +111,7 @@ nav{
 }
 
 .chat-input{
-    /* width: 100%; */
-    /* position: absolute; */
-    /* bottom: 1rem; */
+
 }
 
 .chat-input input{
@@ -110,10 +133,7 @@ nav{
 /* Send Button */
 
 .chat-send{
-    /* width: 100%; */
-    /* position: absolute; */
-    /* bottom: 1rem; */
-    /* right: 1rem; */
+
 }
 
 .chat-send button{
@@ -135,4 +155,5 @@ nav{
 .user-icon{
     margin: 0 1rem;
 }
+
 
